# Zhiyun

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
.trae/rules/: filename.md
app/: README.md  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/zhiyun/code/: MainActivity.kt  MainApplication.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
backend/: Cargo.toml  DESIGN.md  README.md
backend/agent/: DESIGN.md
backend/common/change/: Cargo.toml  DESIGN.md
backend/common/change/src/: change.rs  merge.rs  operation.rs  snapshot.rs  thread.rs  version.rs
backend/common/endpoint/: Cargo.toml
backend/common/endpoint/src/: error.rs  lib.rs  registry.rs  stream.rs  traits.rs
backend/common/provider/: Cargo.toml  DESIGN.md
backend/common/provider/src/: lib.rs  traits.rs
backend/common/provider/src/local/: filesystem.rs  process.rs
backend/common/provider/src/remote/: filesystem.rs  process.rs
backend/knowledge/: Cargo.toml  DESIGN.md
backend/project/: DESIGN.md
backend/semantic/: Cargo.toml  DESIGN.md
backend/skill/: Cargo.toml  DESIGN.md  README.md
backend/skill/src/: injector.rs  loader.rs  registry.rs  state.rs  tool.rs  types.rs
backend/src/: README.md  lib.rs
backend/src/agent/: DESIGN.md  README.md  bridge.rs  context.rs  executor.rs  intent.rs  manager.rs  mod.rs  planner.rs  routine.rs
backend/src/agent/routine/: executor.rs  mod.rs
backend/src/common/: DESIGN.md  README.md  mod.rs
backend/src/common/change/: README.md  change.rs  merge.rs  mod.rs  operation.rs  snapshot.rs  thread.rs  version.rs
backend/src/common/endpoint/: README.md  error.rs  mod.rs  registry.rs  stream.rs  traits.rs
backend/src/common/intent/: dispatcher.rs  handler.rs  mod.rs  traits.rs
backend/src/common/meta/: README.md  ast.rs  mod.rs  plugin.rs  registry.rs  service.rs
backend/src/common/provider/: README.md  mod.rs  traits.rs
backend/src/common/provider/local/: README.md  filesystem.rs  process.rs
backend/src/common/provider/remote/: README.md  filesystem.rs  mod.rs  process.rs
backend/src/compiler/: DESIGN.md  README.md  analyzer.rs  diagnostic.rs  mod.rs  registry.rs
backend/src/editor/: DESIGN.md  README.md  intent.rs  mod.rs  reconciler.rs  session.rs  tab.rs
backend/src/knowledge/: DESIGN.md  README.md  graph.rs  mod.rs  retriever.rs  store.rs
backend/src/project/: DESIGN.md  README.md  adapter.rs  mod.rs  resolver.rs  workspace.rs
backend/src/semantic/: DESIGN.md  README.md  graph.rs  mod.rs  refactor.rs  resolver.rs
backend/src/skill/: DESIGN.md  README.md  injector.rs  loader.rs  mod.rs  registry.rs  state.rs  tool.rs  types.rs
backend/src/syntax/: DESIGN.md  README.md  cache.rs  executor.rs  loader.rs  mod.rs
backend/src/syntax/engine/: README.md  interface.rs
backend/syntax/: DESIGN.md
core/: README.md
core/gateway/: README.md  build.gradle.kts
core/host/: README.md  build.gradle.kts
core/nearby/: README.md  build.gradle.kts
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
gradle/wrapper/: gradle-wrapper.properties
service/: README.md
service/agent/: README.md  build.gradle.kts
service/builder/: README.md  build.gradle.kts
service/editor/: README.md  build.gradle.kts
service/explorer/: README.md  build.gradle.kts
service/outline/: README.md  build.gradle.kts
service/search/: README.md  build.gradle.kts
service/terminal/: README.md  build.gradle.kts
service/version/: README.md  build.gradle.kts
