[workspace]
resolver = "2"
members = [
    "backend/common/change",
    "backend/common/endpoint",
    "backend/common/provider",
    "backend/agent",
    "backend/skill",
    "backend/syntax",
    "backend/semantic",
    "backend/project",
    "backend/knowledge", 
]

[workspace.dependencies]
thiserror = "2.0.17"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9"

tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3"
tokio-stream = "0.1"
