[package]
name = "zhiyun-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9"
schemars = "0.8"

# Data Types
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
lazy_static = "1.5"

# Async / IO
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# CRDT / Text
yrs = "0.25.0"
diff = "0.1"

# Database / Knowledge
qdrant-client = "1.16"
surrealdb = { version = "2.1", features = ["kv-mem"] }

# Network / AI
async-openai = "0.26"
reqwest = { version = "0.12", features = ["json"] }

# Provider specific (Remote / SSH)
russh = { version = "0.45", optional = true }
russh-sftp = { version = "2.0", optional = true }
sha2 = "0.10.8"

[features]
default = ["ssh"]
ssh = ["dep:russh", "dep:russh-sftp"]

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3"
