[package]
name = "endpoint"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

async-openai = "0.26"
reqwest = { version = "0.12", features = ["json"] }
schemars = "0.8"