[package]
name = "provider"
version = "0.1.0"
edition = "2021"

[dependencies]
# 公共依赖
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
async-stream = "0.3"

# SSH 支持（可选特性）
russh = { version = "0.45", optional = true }
russh-sftp = { version = "2.0", optional = true }

# Linux 平台依赖 - io_uring
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5"

# Unix/macOS 平台依赖 - kqueue（tokio 内置支持，无需额外依赖）
# [target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]

# Windows 平台依赖 - IO Ring/IOCP
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
default = ["ssh"]
ssh = ["dep:russh", "dep:russh-sftp"]

[dev-dependencies]
tempfile = "3"